tests/misc/errors/js/module-attributes.js
import foo from "foo.json" with foo: "json";
